# dak

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
dak/: dak.hpp
dim/: dim.hpp
tests/: CMakeLists.txt  test_dim.cc  test_point.cc  test_scalar.cc  test_vector.cc
